Should be able to run with minimum changes
Added requirements.txt; switched to a tested commit of piper-sample-generator that does resampling by default;

Signed-off-by: Vadim Grinco <vadim@grinco.eu>

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 
 # Allow (negate the ignore) the three specific files
 !.gitignore
+!requirements.txt
 !train_wake_word.py
+!train_wake_word.run.sh
 !train_wake_word.setup.sh
